--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        julia-version: ['1.10', '1.11', '1.12']
+        julia-version: ['lts', '1']
 
     steps:
       - uses: actions/checkout@v4
@@ -45,7 +45,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        julia-version: ['1.10', '1.11', '1.12']
+        julia-version: ['lts', '1']
 
     steps:
       - uses: actions/checkout@v4
@@ -120,7 +120,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        julia-version: ['1.10', '1.11', '1.12']
+        julia-version: ['lts', '1']
 
     steps:
       - uses: actions/checkout@v4
@@ -179,7 +179,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        julia-version: ['1.12']
+        julia-version: ['1']
 
     steps:
       - uses: actions/checkout@v4
